# ouxt_behavior_descriptor_v1

./: CMakeLists.txt  README.md  dependency.repos  package.xml
.github/workflows/: ROS2-Foxy.yaml  ROS2-Galactic.yaml
include/ouxt_behavior_descriptor_v1/: component.hpp  data_structures.hpp  operators.hpp  visibility.hpp
launch/: test.py
src/: main.cpp
test/example/: test.yaml
